# rust-wasm-example

./: 1.js  1.worker.js  Cargo.toml  README.md  index.js  package-lock.json  package.json  wasm.worker.js  webpack.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml
js/: dom.js  index.js  wasm-worker.js
mod_c/: Cargo.toml  build.rs
mod_c/src/: lib.rs  main.rs
mod_c/src/c/: foo.c
mod_cpp/: Cargo.toml  build.rs
mod_cpp/src/: lib.rs  main.rs
mod_cpp/src/c/: bar.c
mod_cpp/src/cpp/: bar.cpp
mod_py/: Cargo.toml
rs_audio/: Cargo.toml
rs_audio/src/: lib.rs
rs_image/: Cargo.toml
rs_image/src/: lib.rs
rs_text/: Cargo.toml
rs_text/src/: lib.rs
rs_zip/: Cargo.toml
rs_zip/src/: lib.rs
src/: lib.rs
