[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
#default = ["wee_alloc"]

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
mod_c = { path = "./mod_c" }
rs_audio = { path = "./rs_audio" }
rs_image = { path = "./rs_image" }
rs_text = { path = "./rs_text" }
rs_zip = { path = "./rs_zip" }

[dependencies.web-sys]
version = "0.3.42"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.15"
futures = "0.3.5"
js-sys = "0.3.42"
wasm-bindgen-futures = "0.4.15"
